# sandbox

./: AGENTS.md
.github/workflows/: deploy.yml
.hermes/plans/: 2025-07-02-card-print-tool.md
card-print/: README.md  pyproject.toml
card-print/card_print/: __init__.py  __main__.py  models.py  packer.py  parser.py  pdf.py  preview.py  renderer.py  template.py  template_models.py
card-print/docs/plans/: 2025-07-05-custom-templates.md
card-print/fixtures/: test.csv
card-print/tests/: test_integration.py  test_integration_template.py  test_models.py  test_packer.py  test_parser.py  test_pdf.py  test_template_models.py
minesweeper/: index.html  package.json
minesweeper/src/: main.ts  renderer.ts  style.css  types.ts
minesweeper/src/engine/: GameEngine.test.ts  GameEngine.ts
